<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#193D42"
    android:padding="20dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#193D42"
        android:padding="20dp"
        android:visibility="invisible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:textSize="32sp"
            android:textColor="#C55555"
            android:gravity="center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textColor="#C55555"
            android:gravity="center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textColor="#C55555"
            android:gravity="center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstLastName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textColor="#C55555"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textColor="#C55555"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#C55555"
            android:text="@string/again"
            />






    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#193D42"
        android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textSize="32sp"
        android:textColor="#C55555"
        android:gravity="center"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNotify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="#C55555"
        android:gravity="center"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="#C55555"
        android:textColor="#C55555"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:maxLines="1"
        android:textColorHint="#C55555"
        android:textColor="#C55555"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:textColorHint="#C55555"
        android:textColor="#C55555"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        android:maxLines="1"
        android:textColorHint="#C55555"
        android:textColor="#C55555"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/age"
        android:maxLines="1"
        android:inputType="number"
        android:textColorHint="#C55555"
        android:textColor="#C55555"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#C55555"
        android:text="@string/save"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#C55555"
        android:text="@string/clear"
        />



    </LinearLayout>

</FrameLayout>